add script copy phone

--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -574,8 +574,8 @@
                                     <td></td>
                                     <td></td>
                                     <td></td>
-                                    <td rowspan="3" class="go-to-school" title="Kiểm tra bóng rổ 1"><span
-                                            style="color: red;">Kiểm tra </span><strong>bóng rổ 1</strong>
+                                    <td rowspan="3" class="go-to-school" title="Kiểm tra bóng rổ 1">
+                                        <strong>Bóng rổ 1</strong>
                                         <p>Phòng: <strong>R2-03.12</strong></p>
                                     </td>
                                 </tr>
@@ -659,20 +659,11 @@
     </div>
     <!-- END MAIN PANEL -->
 
-
-
-
-
-
-
     <div class="modal fade in" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
         aria-hidden="true" style="display: none; padding-right: 17px;">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                        ×
-                    </button>
                     <h4 class="modal-title" id="myModalLabel">Thông tin chi tiết</h4>
                 </div>
                 <div class="modal-body">
@@ -680,16 +671,15 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="text-center">Bóng rổ 1</h1>
-                            <p>Phòng: E1-02.12</p>
-                            <p>Phòng: E1-02.12</p>
-                            <p>Phòng: E1-02.12</p>
-                            <p>Phòng: E1-02.12</p>
-
+                            <p><strong>Phòng:</strong> E1-02.12</p>
+                            <p><strong>Lớp:</strong> 22DTHA4</p>
+                            <p><strong>Giáo viên giảng dạy: </strong>Nguyễn Ngốc Nghếck</p>
+                            <p><strong>Số tiết: </strong>3</p>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                    <button type="button" class="btn btn-lg btn-success" data-dismiss="modal">
                         Cancel
                     </button>
                 </div>
